# 7-sem

./: Женщины в бизнесе_Костюченко_ит_4_6.docx  ОУИС Анти-стеганография технологии, препятствующие скрытию информации Костюченко.docx  ОУИС Анти-стеганография технологии, препятствующие скрытию информации Костюченко.pptx  Основы права 4 курс (Потоцкий А. А.).docx  Финансирование ИТ-стартапа модели инвестиций, венчурный капитал и закономерности привлечения ресурсов.docx  женщины в бизнесе кратко.docx
KIS/1/: КИС_ЛР1_Начало работы.docx
KIS/10/: КИС_ЛР10.docx  КИС_ЛР10_Реализация процессов продажи и закупок.docx
KIS/11/: КИС_ЛР11.docx  КИС_ЛР11_Реализация процессов производства и учет.docx
KIS/2/: КИС_ЛР2_Создание информационной базы. Объекты справочной информации и документы (1).docx
KIS/3/: 1_1.drawio  1_2.drawio  2_1.drawio  2_2.drawio  2_2_2.drawio  lab03.docx  КИС_ЛР3_Алгоритмизация.docx
KIS/4/: КИС_ЛР4_Программирование на 1С.docx  ЛабораторнаяРабота4.dt
KIS/5/: КИС_ЛР5_Базовые инструменты разработчика.docx  ЛабораторнаяРабота5_1.dt  ЛабораторнаяРабота5_2.dt  ЛабораторнаяРаботаМ5.dt
KIS/6/: КИС_ЛР6_Построение отчетов.docx  ЛабораторнаяРабота6_1.dt  ЛабораторнаяРабота6_2.dt
KIS/7/: КИС_ЛР7_Регистры сведений.docx  Лабораторная_работа_7_1.dt  (+1 more)
OYIS/: ОУИС_Костюченко_4_6.docx
RiOS/1/1/1/: CMakeLists.txt
RiOS/1/1/1/include/: client_stats.h  get_sync.h  set_sync.h
RiOS/1/1/1/src/: server.cpp
RiOS/1/1/1/src/ntp/: ntp_time_client.cpp  ntp_time_server.cpp
RiOS/1/1/1/src/p18/: p18_client.cpp  p18_server.cpp
RiOS/1/1/1/test/: test_multiple_clients.bash
(+336 files in other folders)
